--- a/app/views/articles/android_all.html.erb
+++ b/app/views/articles/android_all.html.erb
@@ -7,18 +7,29 @@
 	<div class="collection col-xs-12">
 		<div class="row">
 		<% articulos.each do |article| %>
-			<div>
-				<%=link_to article.title,article,:class=>"collection-item col-xs-12" %>
-				<%if can? :update, @article%>
-					<%= link_to edit_article_path(article)do %>
-						<i class="fa fa-pencil-square-o absolute-button"></i>
+			
+			<div class="col-xs-12">
+				<div class="row">
+					<%=link_to article.title,article,:class=>"collection-item col-xs-8" %>
+
+					<div class="collection-item col-xs-4">
+						<span class="indigo-text text-darken-4">Categorias:</span>
+						<%article.tags.each do |tag| %>
+							<span class=" light-blue-text"><%= tag.name%></span>
+						<%end%>
+					</div>
+
+					<%if can? :update, @article%>
+						<%= link_to edit_article_path(article)do %>
+							<i class="fa fa-pencil-square-o absolute-button"></i>
+						<%end%>
 					<%end%>
-				<%end%>
-				<%if can? :destroy, @article%>
-					<%= link_to article,method: :delete,data:{confirm:"Esta seguro?"} do%>
-						<i class="fa fa-trash-o absolute-top"></i>
+					<%if can? :destroy, @article%>
+						<%= link_to article,method: :delete,data:{confirm:"Esta seguro?"} do%>
+							<i class="fa fa-trash-o absolute-top"></i>
+						<%end%>
 					<%end%>
-				<%end%>
+				</div>
 			</div>
 		<%end%>
 		</div>
