--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -17,7 +17,7 @@
 	</div>
 	<div class="card">
 		<div class="card-image waves-effect waves-block waves-light">
-			<%= image_tag article.image.url(:index_cards),:class=>"activator" %>
+			<img src="<%= article.image.url(:index_cards)%>" class="activator" alt="<%= article.title %> - V.<%= article.version %>">
 		</div>
 		<div class="card-content">
 			<div class="card-title activator grey-text text-darken-4 titulo">
