--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -37,7 +37,7 @@
 				
 
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 margin-left">	
-					<%= image_tag @article.image.url(:show),:class=>"show-imagen materialboxed" %>
+					<img src="<%= @article.image.url(:show)%>"class="show-imagen materialboxed" alt="<%= @article.title%> - V.<%= @article.version %>">
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-5">
 					<div class="col-xs">
