--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -85,7 +85,7 @@
 				    </div>
 				<%end%>
 				<li>
-					<%= link_to root_path,:style=>"padding: 15px 0px;" do%>
+					<%= link_to root_path do%>
 						
 							<img src="http://res.cloudinary.com/alfredhdz/image/upload/v1452741743/logo_tgkmjf.png" alt="logo">
 					
