--- a/app/views/parciales/_tags.html.erb
+++ b/app/views/parciales/_tags.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding" id="target">
+<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding hide-on-med-and-down" id="target">
 	<aside>
 		<div class="row cero-margin">
 			<% category_where.each do |tag| %>
