--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,57 +1,57 @@
 <div class="row center-xs marin-top">
   <div class="col-xs-12 col-sm-7 col-md-6 col-lg-5 sombras">
-    <h5 class="fondos_h text-shadow">Editar Usuario</h5>
-    <div class="row">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put ,:class =>"col s12"}) do |f| %>
-        
-        <div class="row">
-          <div class="input-field col s6">
-            <%= f.label :username,"Nombre de Usuario" %><br />
-            <%= f.text_field :username, autofocus: true %>
-          </div>
+	 <h5 class="fondos_h text-shadow">Editar Usuario</h5>
+	 <div class="row">
+		<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put ,:class =>"col s12"}) do |f| %>
+		  
+		  <div class="row">
+			 <div class="input-field col s6">
+				<%= f.label :username,"Nombre de Usuario" %><br />
+				<%= f.text_field :username, autofocus: true %>
+			 </div>
 
-          <div class="input-field col s6">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autofocus: true %>
-          </div>
+			 <div class="input-field col s6">
+				<%= f.label :email %><br />
+				<%= f.email_field :email, autofocus: true %>
+			 </div>
 
-          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-          <% end %>
+			 <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+				<div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+			 <% end %>
 
-          <div class="input-field col s12">
-            <%= f.label :Contraseña_Deje_en_blanco_si_no_quiere_modificar %>
-            <%= f.password_field :password, autocomplete: "off" %>
-          </div>
+			 <div class="input-field col s12">
+				<%= f.label :Contraseña_Deje_en_blanco_si_no_quiere_modificar %>
+				<%= f.password_field :password, autocomplete: "off" %>
+			 </div>
 
-          <div class="input-field col s12">
-            <%= f.label :Confirme_Contraseña %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "off" %>
-          </div>
+			 <div class="input-field col s12">
+				<%= f.label :Confirme_Contraseña %><br />
+				<%= f.password_field :password_confirmation, autocomplete: "off" %>
+			 </div>
 
-          <div class="input-field col s12">
-            <%= f.label :Contraseña_Actual %>
-            <%= f.password_field :current_password, autocomplete: "off" ,required:"required"%>
-          </div>
+			 <div class="input-field col s12">
+				<%= f.label :Contraseña_Actual %>
+				<%= f.password_field :current_password, autocomplete: "off" ,required:"required"%>
+			 </div>
 
-           <div class="actions col s12 right-align ">
-            <button class="btn waves-effect waves-red valign" type="submit" name="action" style="width: 100%;height:35px;">
-               GUARDAR CAMBIOS
-              <i class="material-icons right">send</i>
-            </button>
-          </div>
+			  <div class="actions col s12 right-align ">
+				<button class="btn waves-effect waves-red valign" type="submit" name="action" style="width: 100%;height:35px;">
+					GUARDAR CAMBIOS
+				  <i class="fa fa-paper-plane right"></i>
+				</button>
+			 </div>
 
 
-        </div>
-      <% end %>
-      <div class="row">
-         <div class="actions col s12 left-align">
-            <%= link_to "CANCELAR MI CUENTA", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete,:class=>"btn waves-effect waves-red btn-trans" %></p>
-         </div>
-      </div>
-      <div class="actions col s12 right-align ">
-         <%= link_to "Back", :back %>
-      </div>
-    </div>
+		  </div>
+		<% end %>
+		<div class="row">
+			<div class="actions col s12 left-align">
+				<%= link_to "CANCELAR MI CUENTA", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete,:class=>"btn waves-effect waves-red btn-trans" %></p>
+			</div>
+		</div>
+		<div class="actions col s12 right-align ">
+			<%= link_to "Back", :back %>
+		</div>
+	 </div>
   </div>
 </div>
