--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -94,7 +94,7 @@
 				<main class="sombras" >		
 					<%= render @articles %>
 					<div class="col-xs-12 border-top pagination">
-						<%= will_paginate @articles,:container => false %>
+						<%= will_paginate @articles %>
 					</div>
 				</main>
 			</div>
