--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -97,7 +97,7 @@
 						
 						<div class="digg_pagination">
 						    <div class="page_info">
-						      <%= page_entries_info @posts %>
+						      <%= page_entries_info @articles %>
 						    </div>
 						    <%= will_paginate @articles,:container => false %>
 						 </div>
